fix width issue on mobile devices

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -84,15 +84,14 @@ h2 {
                 border: 1px solid white;
                 padding: .1em .3em;
                 border-radius: 10px;
-            }               
+            }       
+
+            .menu-icons {
+                            display: none;
+                         }
 
              nav {
-                    line-height: 1.8em;
-
-                  .menu-icons {
-                    display: none;
-                  }
-
+                    line-height: .6em;
 
                   ul {
                         display: flex;
@@ -110,7 +109,16 @@ h2 {
 
             @include u.breakpoint(medium){
                 // background-color: black;
-  
+
+                .menu-icons {
+                        display: block;
+                        color: white;
+                        font-weight: bold;
+                        font-size: 22px;
+                        margin: 10px;
+                        cursor: pointer;
+                    }
+
                 nav {
                     position: absolute;
                     top: 0;
@@ -121,27 +129,9 @@ h2 {
                     text-align: left;
                     z-index: 4;  
                     transition: 1s;
-                    
-                    .menu-icons {
-                        display: block;
-                        color: white;
-                        font-weight: bold;
-                        font-size: 22px;
-                        margin: 10px;
-                        cursor: pointer;
-                    }
-
-
+            
                     ul { 
-
-                        display: block;
-                    
-                            // li {
-
-
-                            // }
-                            
-                
+                         display: block;                                        
                     }
                 }
 
@@ -150,12 +140,9 @@ h2 {
     }
 
 
-
-
-
 .hero {
     min-height: 63vh;
-    width: 100%; 
+    max-width: 100%; 
     background-image:url(../images/background/pexels-tiana-238302.jpg);
     background-position: center;
     background-size: cover;
@@ -193,15 +180,14 @@ h2 {
  .post {  
 
             border-bottom: .01em solid  var(--secondary-color);
-            margin: 1.2em auto;
+            margin: 1.2em 0;
             padding: 0 .2em;
             max-width: 80%;
-        
 
             &__titles {
                 display: flex;
                 align-items: center;
-                width: 660px;
+                max-width: 660px;
                 height: 40px;
                 
                 
@@ -281,7 +267,7 @@ h2 {
 
             @include u.breakpoint(medium){
 
-
+                    max-width: 100%;
                     &__body {
                             .body-text {
 
@@ -301,7 +287,7 @@ h2 {
                                 height: 5em;
                                 display: block;
                                 border-radius: 0.42em;
-                                margin-left: 0;
+                                // margin-left: 0;
                             }
                             
                             .description {
